tests/integrations/basic-fail/tests/actual_tests_bless/revisions_same_everywhere.foo.stderr
error[E0308]: mismatched types
 --> tests/actual_tests_bless/revisions_same_everywhere.rs:5:9
  |
5 |     add("42", 3);
  |     --- ^^^^ expected `usize`, found `&str`
  |     |
  |     arguments to this function are incorrect
  |
note: function defined here
 --> $DIR/tests/integrations/basic-fail/src/lib.rs:1:8
  |
1 | pub fn add(left: usize, right: usize) -> usize {
  |        ^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
